--- a/sugarcrm/styleguide/less/sugar-specific/responsive-sugar.less
+++ b/sugarcrm/styleguide/less/sugar-specific/responsive-sugar.less
@@ -422,6 +422,17 @@
   .uxs-scroll-bar {
     width: 98.6%;
   }
+
+  // Scheduler UI profile row
+  .record div[data-name="invitees"] {
+    .participants-schedule .row.participant .cell.profile .name span {
+      width: 72px;
+    }
+    .participants-form .cell.select .field {
+      margin-left: -181px;
+    }
+  }
+
 }
 
 @media (max-width: 700px) {
